[gd_scene load_steps=4 format=3 uid="uid://b5np4b83uqkua"]

[ext_resource type="Script" path="res://game/level/grid/TestRunner.gd" id="1_xrxil"]
[ext_resource type="PackedScene" uid="uid://cww4tk7afj31" path="res://game/level/Grid.tscn" id="2_ojaat"]
[ext_resource type="Script" path="res://game/level/grid/GridTests.gd" id="3_ftgq8"]

[node name="TestRunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrxil")

[node name="Tests" type="Node" parent="."]
script = ExtResource("3_ftgq8")

[node name="Run" type="Button" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 123.0
offset_right = 283.0
offset_bottom = 154.0
text = "Run tests"

[node name="Grid1" parent="." instance=ExtResource("2_ojaat")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177083
anchor_top = 0.322222
anchor_right = 0.491146
anchor_bottom = 0.822222
metadata/_edit_use_anchors_ = true

[node name="Grid2" parent="." instance=ExtResource("2_ojaat")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.622396
anchor_top = 0.305556
anchor_right = 0.936458
anchor_bottom = 0.805556
metadata/_edit_use_anchors_ = true

[connection signal="show_grids" from="Tests" to="." method="_on_tests_show_grids"]
[connection signal="pressed" from="Run" to="." method="_on_run_pressed"]
